--- a/prototype/mainwindow.ui
+++ b/prototype/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="vnesh_tab">
        <property name="enabled">
@@ -324,6 +324,13 @@
           </property>
          </widget>
         </item>
+        <item>
+         <widget class="QLabel" name="sql_label_2">
+          <property name="text">
+           <string>TextLabel</string>
+          </property>
+         </widget>
+        </item>
        </layout>
       </widget>
      </widget>
@@ -336,7 +343,7 @@
      <x>0</x>
      <y>0</y>
      <width>1390</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
